@@ -1,4 +1,5 @@
 1.1.0
+   - bug [11159] "HarvestType enum i common/types skal gøres til privat enum i DatadockMain"
    - bug [11099] "Datadock lukker ikke korrekt ned når/selvom JVM'en får et SIGTERM signal"
    - bug [11115] "Bruges FedoraAuxiliaryMain?"
    - bug [11117] "Efter refaktorering af DatadockMain mangler den test"
